# engagement_detector

./: .gitignore  package.xml  setup.py
src/engagement_detector/: camera.py  engagement_detector.py  ros_engagement_detector.py  time_serie_in_image.py
